--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,17 @@ before_script: |
   git clone https://github.com/junegunn/vader.vim.git
   git clone https://github.com/junegunn/vim-pseudocl.git
   git clone https://github.com/tpope/vim-repeat
-  sudo apt-get update -qq
-  sudo apt-get install -y vim-nox
+
+  # https://github.com/Valloric/YouCompleteMe/wiki/Building-Vim-from-source
+  sudo apt-get remove -y vim vim-runtime gvim vim-tiny vim-common vim-gui-common
+  hg clone https://code.google.com/p/vim/
+  cd vim
+  ./configure --with-features=huge --prefix=/usr
+  make VIMRUNTIMEDIR=/usr/share/vim/vim74
+  sudo make install
 
 script: |
-  vim -Nu <(cat << VIMRC
+  /usr/bin/vim -Nu <(cat << VIMRC
   set rtp+=vader.vim
   set rtp+=vim-pseudocl
   set rtp+=vim-repeat
