Simplify Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ before_script: |
   git clone https://github.com/junegunn/vim-pseudocl.git
   git clone https://github.com/tpope/vim-repeat
 
-  sudo apt-get remove -y vim vim-runtime vim-tiny vim-common
   hg clone https://code.google.com/p/vim/
   cd vim
-  ./configure --with-features=huge --prefix=/usr
-  make VIMRUNTIMEDIR=/usr/share/vim/vim74
+  # ./configure --with-features=huge --enable-rubyinterp --enable-pythoninterp
+  ./configure --with-features=huge
+  make
   sudo make install
   cd -
 
 script: |
-  /usr/bin/vim -Nu <(cat << VIMRC
+  /usr/local/bin/vim -Nu <(cat << VIMRC
   set rtp+=vader.vim
   set rtp+=vim-pseudocl
   set rtp+=vim-repeat
